infra/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
spec:
  ingressClassName: nginx
  rules:
    - host: "jenkins.openetra.net"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
